// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders Switch correctly with more props 1`] = `
<div>
  <span
    class="ui-switch disabled size-sm"
  >
    <span
      class="ui-switch-inner"
    >
      否
    </span>
  </span>
</div>
`;

exports[`Switch renders normal Switch correctly 1`] = `
<div>
  <span
    class="ui-switch"
  >
    <span
      class="ui-switch-inner"
    />
  </span>
</div>
`;
